2007-09-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a possible race condition in CamelMultiPart

2007-09-03  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a filedescriptor leak when there are no items in a folder, on
	summary.mmap
	* Changed the Copyright of tny-vfs-stream.c: the original is not
	really recognizable anymore so it shouldn't copy the copyright of the
	original as this is not a copy anymore.
	* Date, Received, INTERNALDATE: fixes 
	* Fixed filedescriptor leaks with local folders
	* Fixed online command attempts when password got cancelled
	* Fixed a deadlock when sending failed
	* Fixed some things in TnyCamelSendQueue
	* Removed a unnecessary API

	* This was a major API change

2007-09-03  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>

	* Add a new API function, tny_send_queue_add_async to define
	user and status callbacks for messages transfer to outbox 
	folder. 

2007-09-03  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail/tny-merge-folder.[ch]: added two new functions
	tny_merge_folder_remove_folder
	tny_merge_folder_get_folders

	This is a major API change

2007-08-29  Armin Burgmeier  <armin@openismus.com>

	* libtinymail-camel/tny-camel-account.c
	(tny_camel_account_get_supported_secure_authentication_async_thread):
	Call the prepare_func vfunc before asking camel to ask the server for
	auth types so priv->service is set.

2007-08-31 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* Fix tny_camel_msg_header_date_(sent|received):
		- don't try to normalize to GMT (camel already does that)
		- only use Date: for received if not received date is found
	* don't try to disconnect from conic if the IAP == NULL, as that
	  causes a segfault

2007-08-29 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* Set the correct X-Priority: header values, and parse the correct
	  as well (1 (Highest), 2 (High), 3 (Normal), 4 (Low), 5 (Lowest))

2007-08-28  Javier Fernandez Garcia-Boente  <jfernandez@igalia.com>
