@@ -68,7 +68,6 @@ TnyCamelTransportAccount* tny_camel_send_queue_get_transport_account (TnyCamelSe
 void tny_camel_send_queue_set_transport_account (TnyCamelSendQueue *self,
 						 TnyCamelTransportAccount *trans_account);
 
-void tny_camel_send_queue_join_worker (TnyCamelSendQueue *self);
 void tny_camel_send_queue_add_async (TnyCamelSendQueue *self, TnyMsg *msg, TnySendQueueAddCallback callback, TnyStatusCallback status_callback, gpointer user_data);
 
 G_END_DECLS
